[gd_scene load_steps=20 format=3 uid="uid://ct1cjbho53qot"]

[ext_resource type="Script" path="res://Utilities/Classes/enemy.gd" id="1_8aesk"]
[ext_resource type="AnimationLibrary" uid="uid://1fqnc4lwlfun" path="res://Global/Entities/Enemies/BaseEnemy/Animations/EnemyMove.res" id="2_do23a"]
[ext_resource type="Texture2D" uid="uid://dsb6tv6epn1mh" path="res://Assets/Art/Handler-sheet.png" id="2_ib6va"]
[ext_resource type="PackedScene" uid="uid://jmnf0fy8c8di" path="res://Global/Components/hitbox.tscn" id="3_qicfr"]
[ext_resource type="AnimationLibrary" uid="uid://bpohnjdnr7cam" path="res://Global/Entities/Enemies/BaseEnemy/Animations/EnemyAction.res" id="3_uyegr"]
[ext_resource type="PackedScene" uid="uid://07qnueve2in3" path="res://Global/StateMachine/action_state_machine.tscn" id="4_nwqih"]
[ext_resource type="Script" path="res://Global/Components/health_component.gd" id="4_r87u3"]
[ext_resource type="PackedScene" uid="uid://c2njkfc01sgji" path="res://Global/StateMachine/move_state_machine.tscn" id="5_dkqxv"]
[ext_resource type="Script" path="res://Global/Entities/Enemies/BaseEnemy/enemy_move_component.gd" id="5_y62e2"]
[ext_resource type="Script" path="res://Global/StateMachine/States/move.gd" id="6_am21n"]
[ext_resource type="Script" path="res://Global/Entities/Enemies/BaseEnemy/EnemyStates/light.gd" id="6_lwoos"]
[ext_resource type="Script" path="res://Global/StateMachine/States/idle.gd" id="7_lclfu"]
[ext_resource type="Script" path="res://Global/StateMachine/States/jump.gd" id="8_1dunk"]
[ext_resource type="Script" path="res://Global/Entities/Enemies/BaseEnemy/EnemyStates/heavy.gd" id="8_teoi8"]
[ext_resource type="Script" path="res://Global/Entities/Enemies/BaseEnemy/EnemyStates/none.gd" id="8_wa8xr"]
[ext_resource type="Script" path="res://Global/StateMachine/States/fall.gd" id="14_qn5lm"]

[sub_resource type="Animation" id="Animation_1f2ae"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_avsj1"]
_data = {
"RESET": SubResource("Animation_1f2ae")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pvppk"]
radius = 7.0
height = 14.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_8aesk")

[node name="AttackPoint" type="Node2D" parent="."]
position = Vector2(0, -10)

[node name="MoveAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_avsj1"),
"EnemyMove": ExtResource("2_do23a")
}

[node name="ActionAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"EnemyAction": ExtResource("3_uyegr")
}

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_r87u3")

[node name="EnemyMoveComponent" type="Node" parent="."]
script = ExtResource("5_y62e2")

[node name="EnemyActionComponent" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -20)
texture = ExtResource("2_ib6va")
hframes = 7
vframes = 2
frame = 7

[node name="GroundCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_pvppk")

[node name="Hitbox" parent="." instance=ExtResource("3_qicfr")]
position = Vector2(0, -7)

[node name="ActionStateMachine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("4_nwqih")]
starting_state = NodePath("none")

[node name="light" type="Node" parent="ActionStateMachine"]
script = ExtResource("6_lwoos")

[node name="heavy" type="Node" parent="ActionStateMachine"]
script = ExtResource("8_teoi8")

[node name="none" type="Node" parent="ActionStateMachine"]
script = ExtResource("8_wa8xr")

[node name="MoveStateMachine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("5_dkqxv")]
starting_state = NodePath("idle")

[node name="move" type="Node" parent="MoveStateMachine"]
script = ExtResource("6_am21n")

[node name="idle" type="Node" parent="MoveStateMachine"]
script = ExtResource("7_lclfu")

[node name="jump" type="Node" parent="MoveStateMachine"]
script = ExtResource("8_1dunk")

[node name="fall" type="Node" parent="MoveStateMachine"]
script = ExtResource("14_qn5lm")
